--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,7 @@
     #previously this would not have been possible.
     #'system' can be replaced if you have renamed your system folder.
     RewriteCond %{REQUEST_URI} ^system.*
-    RewriteRule ^(.*)$ /simpeg-mojokerto/index.php?/$1 [L]
+    RewriteRule ^(.*)$ /simpeg_mojokerto/index.php?/$1 [L]
 	#RewriteRule ^(.*)$ /index.php?/$1 [L]
     
     #When your application folder isn't in the system folder
@@ -18,7 +18,7 @@
     #Submitted by: Fabdrol
     #Rename 'application' to your applications folder name.
     RewriteCond %{REQUEST_URI} ^application.*
-    RewriteRule ^(.*)$ /simpeg-mojokerto/index.php?/$1 [L]
+    RewriteRule ^(.*)$ /simpeg_mojokerto/index.php?/$1 [L]
 	#RewriteRule ^(.*)$ /index.php?/$1 [L]
 
     #Checks to see if the user is attempting to access a valid file,
@@ -26,7 +26,7 @@
     #request to index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ /simpeg-mojokerto/index.php?/$1 [L]
+    RewriteRule ^(.*)$ /simpeg_mojokerto/index.php?/$1 [L]
 	#RewriteRule ^(.*)$ /index.php?/$1 [L]
 	
 	php_value memory_limit 128M
